force-app/main/default/objects/QF_Contract_in_QDM__c/QF_Contract_in_QDM__c.object-meta.xml
<CustomObject>
    <label>QF Contract in QDM</label>
    <nameField>
        <displayFormat>QF-C-{000000}</displayFormat>
        <label>QF Contract in QDM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QF Contract in QDM</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>