force-app/main/default/objects/QF_Contract_in_QDM__c/fields/Company_1__c.field-meta.xml
<CustomField>
    <fullName>Company_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prism Information</label>
    <referenceTo>Prism_Information__c</referenceTo>
    <relationshipLabel>QF Contract in QDM</relationshipLabel>
    <relationshipName>QF_Contract_in_QDM</relationshipName>
    <type>Lookup</type>
</CustomField>