force-app/main/default/objects/QF_Contract_in_QDM__c/fields/Contract_Last_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Last_Changed_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Last Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>